Added benchmarks, more tests for if and few perf tweaks

--- a/scriptlang.benchmarking/scriptlang.benchmarking.csproj
+++ b/scriptlang.benchmarking/scriptlang.benchmarking.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\scriptlang\scriptlang.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
+  </ItemGroup>
 </Project>
